# MVulkanEngine

./: .gitignore  CMakeLists.txt  README.md  json.py
src/: CMakeLists.txt
src/.VSCodeCounter/2024-11-26_16-07-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/Examples/: CMakeLists.txt
src/Examples/Bindless/: CMakeLists.txt  pbr.cpp  pbr.hpp
src/Examples/ComputePipelineTest/: CMakeLists.txt  ComputePipelineTest.cpp  ComputePipelineTest.hpp  main.cpp
src/Examples/DDGI/: CMakeLists.txt  ddgi.cpp  ddgi.hpp  ddgiPass.cpp  ddgiPass.hpp  ddgiShader.hpp  main.cpp
src/Examples/DynamicRendering/: CMakeLists.txt  main.cpp  pbr.cpp  pbr.hpp
src/Examples/MDF/: CMakeLists.txt  main.cpp  mdf.cpp  mdf.hpp
src/Examples/MeshShaderTest/: CMakeLists.txt  main.cpp  ms.cpp  ms.hpp
src/Examples/PathTracing/: CMakeLists.txt  PathTracing.cpp  PathTracing.hpp  main.cpp
src/Examples/RSM/: CMakeLists.txt
src/Examples/RTAO/: CMakeLists.txt  rtao.cpp  rtao.hpp
src/Examples/RayQueryShadows/: CMakeLists.txt  RayQueryShadows.cpp  RayQueryShadows.hpp
src/Examples/RayQueryTest/: CMakeLists.txt  RayQueryTest.cpp  RayQueryTest.hpp  main.cpp
src/Examples/RayTracingPipelineTest/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
src/Examples/SDFGI/: CMakeLists.txt  main.cpp  sdfgi.cpp  sdfgi.hpp  sdfgiShader.hpp
src/Examples/SSAO/: CMakeLists.txt
src/Examples/VBuffer/: CMakeLists.txt  main.cpp  vbuffer.cpp  vbuffer.hpp
src/Examples/VXAO/: CMakeLists.txt
src/Examples/Voxelization/: CMakeLists.txt  main.cpp  voxel.cpp  voxel.hpp  voxelShader.hpp
src/Examples/ibl/: CMakeLists.txt  ibl.cpp  ibl.hpp  main.cpp
src/Examples/pbr/: CMakeLists.txt  main.cpp  pbr.cpp  pbr.hpp
src/Examples/pbr_packGbuffer/: CMakeLists.txt  pbr.cpp  pbr.hpp
src/Examples/ssr/: CMakeLists.txt  main.cpp  ssr.cpp  ssr.hpp
src/Examples/ssr_v2/: CMakeLists.txt  main.cpp  ssr.cpp  ssr.hpp
src/MVulkanEngine/: CMakeLists.txt
src/MVulkanEngine/include/: Camera.hpp  ComputePass.hpp  Frustum.hpp  Hiz.hpp  JsonLoader.hpp  MRenderApplication.hpp  RenderPass.hpp  UIRenderer.hpp  Util.hpp
src/MVulkanEngine/include/MVulkanRHI/: MVulkanAttachmentBuffer.hpp  MVulkanBuffer.hpp  MVulkanCommand.hpp  MVulkanDescriptor.hpp  MVulkanDescriptorWrite.hpp  MVulkanDevice.hpp  MVulkanEngine.hpp  MVulkanFrameBuffer.hpp  MVulkanInstance.hpp  MVulkanPipeline.hpp  MVulkanQueryPool.hpp  MVulkanRaytracing.hpp  MVulkanRenderPass.hpp  MVulkanSampler.hpp  MVulkanShader.hpp  MVulkanSwapchain.hpp  MVulkanSyncObject.hpp  MWindow.hpp
src/MVulkanEngine/include/Managers/: GlobalConfig.cpp  GlobalConfig.hpp  InputManager.hpp  RandomGenerator.hpp  ShaderManager.hpp  Singleton.hpp  TextureManager.hpp
src/MVulkanEngine/include/Meshlet/: meshlet.hpp
src/MVulkanEngine/include/MultiThread/: ParallelFor.hpp  Task.hpp
src/MVulkanEngine/include/RenderGraph/: DependencyGraph.hpp  RenderGraph.hpp
src/MVulkanEngine/include/Scene/: EmbreeScene.hpp  Material.hpp  Model.hpp  Scene.hpp  SceneLoader.hpp  ddgi.hpp
src/MVulkanEngine/include/Shaders/: Shader.hpp  ShaderModule.hpp  ddgiShader.hpp  meshShader.hpp  voxelShader.hpp
src/MVulkanEngine/include/Utils/: MImage.hpp  VulkanUtil.hpp
src/MVulkanEngine/source/: Camera.cpp  ComputePass.cpp  Frustum.cpp  Hiz.cpp  JsonLoader.cpp  MRenderApplication.cpp  RenderPass.cpp  UIRenderer.cpp  Util.cpp
src/MVulkanEngine/source/MVulkanRHI/: MVulkanAttachmentBuffer.cpp  MVulkanBuffer.cpp  MVulkanCommandList.cpp  MVulkanCommandPool.cpp  MVulkanCommandQueue.cpp  MVulkanDescriptor.cpp  MVulkanDescriptorWrite.cpp  MVulkanDevice.cpp  MVulkanEngine.cpp  MVulkanFrameBuffer.cpp  MVulkanInstance.cpp  MVulkanPipeline.cpp  MVulkanQueryPool.cpp  MVulkanRaytracing.cpp  MVulkanRenderPass.cpp  MVulkanSampler.cpp  MVulkanShader.cpp  MVulkanSwapchain.cpp  MVulkanSyncObject.cpp  MWindow.cpp
src/MVulkanEngine/source/Managers/: GlobalConfig.cpp  InputManager.cpp  RandomGenerator.cpp  ShaderManager.cpp  (+1 more)
src/include/: Camera.hpp  MVulkanBuffer.h  MVulkanCommand.cpp  MVulkanCommand.h  MVulkanDescriptor.h  MVulkanDevice.h  MVulkanEngine.h  MVulkanFrameBuffer.h  MVulkanInstance.h  MVulkanPipeline.h  MVulkanShader.h  MVulkanSwapchain.h  MWindow.h  RenderPass.hpp  Shader.h  Util.hpp  singleton.h
src/include/MVulkanRHI/: MVulkanAttachmentBuffer.hpp  MVulkanBuffer.h  MVulkanBuffer.hpp  MVulkanCommand.h  MVulkanCommand.hpp  MVulkanDepthBuffer.hpp  MVulkanDescriptor.h  MVulkanDescriptor.hpp  MVulkanDevice.h  MVulkanDevice.hpp  MVulkanEngine.h  MVulkanEngine.hpp  MVulkanFrameBuffer.hpp  MVulkanInstance.hpp  MVulkanPipeline.h  MVulkanPipeline.hpp  MVulkanRenderPass.h  MVulkanRenderPass.hpp  MVulkanSampler.h  MVulkanSampler.hpp  MVulkanShader.h  MVulkanShader.hpp  MVulkanSwapchain.hpp  MWindow.hpp  Shader.h
src/include/Managers/: GlobalConfig.hpp  InputManager.hpp  Singleton.hpp  TextureManager.hpp
src/include/Scene/: Material.hpp  Model.hpp  Scene.hpp  SceneLoader.hpp
src/include/Shaders/: ShaderModule.h  ShaderModule.hpp  ShaderResourceMap.h
src/include/Utils/: MImage.hpp  VulkanUtil.h  VulkanUtil.hpp
src/source/: Camera.cpp  MVulkanBuffer.cpp  MVulkanCommandList.cpp  MVulkanCommandPool.cpp  MVulkanCommandQueue.cpp  MVulkanDescriptor.cpp  MVulkanDevice.cpp  MVulkanEngine.cpp  MVulkanFrameBuffer.cpp  MVulkanInstance.cpp  MVulkanPipeline.cpp  MVulkanRenderPass.cpp  MVulkanShader.cpp  MVulkanSwapchain.cpp  MWindow.cpp  RenderPass.cpp  Shader.cpp  Util.cpp  main.cpp
src/source/MVulkanRHI/: MVulkanAttachmentBuffer.cpp  MVulkanBuffer.cpp  MVulkanCommandList.cpp  MVulkanCommandPool.cpp  MVulkanCommandQueue.cpp  MVulkanDepthBuffer.cpp  MVulkanDescriptor.cpp  MVulkanDevice.cpp  MVulkanEngine.cpp  MVulkanFrameBuffer.cpp  MVulkanInstance.cpp  MVulkanPipeline.cpp  MVulkanRenderPass.cpp  MVulkanSampler.cpp  MVulkanShader.cpp  MVulkanSwapchain.cpp  MWindow.cpp  SceneLoader.cpp
src/source/Managers/: InputManager.cpp
src/source/Scene/: Model.cpp  Scene.cpp  SceneLoader.cpp
src/source/Shaders/: Shader.cpp  ShaderModule.cpp
src/source/Utils/: MVulkanDepthBuffer.cpp
(+202 files in other folders)
