#add_subdirectory(pbr)
add_subdirectory(pbr_packGbuffer)
#add_subdirectory(ibl)
#add_subdirectory(ssr)
##add_subdirectory(ssr_v2)
##add_subdirectory(rtao)
#add_subdirectory(DDGI)
##add_subdirectory(SDFGI)
#add_subdirectory(Voxelization)
##add_subdirectory(ComputePipelineTest)
##add_subdirectory(MeshShaderTest)
#add_subdirectory(VBuffer)
##add_subdirectory(PathTracing)
#add_subdirectory(RayQueryShadows)
##add_subdirectory(RayTracingPipelineTest)
##add_subdirectory(bindless)
add_subdirectory(DynamicRendering)